--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <!-- author of code by vish@sbg-->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162841573-1"></script>
     <script>
@@ -14,9 +15,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="author" content="Dennis Marksbury - dennis.marksbury@gmail.com">
+    <meta name="author" content="SBG copy rights - design@studiobananasgroup.com">
     <meta name="description" content="Bingo Calling Application">
     <meta name="keywords" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1" /> 
 
     <link rel="stylesheet" type="text/css" href="app/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="app/css/site.css" />
@@ -26,14 +28,18 @@
     <script type="text/javascript" src="app/bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
+    <!-- author of code by vish@sbg-->
+    <img class="SBB" src="app/images/ShanaBooHeader.png" width="1800"> 
     <nav class="navbar navbar-expand-md bg-bingo fixed-top">
-        <span class="navbar-brand" id="title">Shana-Boo-Bingo</span>
+       <!-- <span class="navbar-brand" id="title">Shana-Boo-Bingo</span> -->
+        <img class="SBB" src="app/images/ShanaBooHeader.png" width="200">
+           <style>.bmc-button img{height: 34px !important;width: 35px !important;margin-bottom: 1px !important;box-shadow: none !important;border: none !important;vertical-align: middle !important;}.bmc-button{padding: 7px 15px 7px 10px !important;line-height: 35px !important;height:51px !important;text-decoration: none !important;display:inline-flex !important;color:#ffffff !important;background-color:#F471FF !important;border-radius: 5px !important;border: 1px solid transparent !important;padding: 7px 15px 7px 10px !important;font-size: 28px !important;letter-spacing:0.6px !important;box-shadow: 0px 1px 2px rgba(190, 190, 190, 0.5) !important;-webkit-box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;margin: 0 auto !important;font-family:'Cookie', cursive !important;-webkit-box-sizing: border-box !important;box-sizing: border-box !important;}.bmc-button:hover, .bmc-button:active, .bmc-button:focus {-webkit-box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;text-decoration: none !important;box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;opacity: 0.85 !important;color:#ffffff !important;}</style><link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet"><a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/vishchintu"><img src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg" alt="BingoPay"><span style="margin-left:5px;font-size:28px !important;">BingoPay</span></a>
     </nav>
 
     <div class="row" style="margin-top:100px;">
 
         <div class="col-md-2"></div>
-
+        
         <div class="col-md-4">
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="app/images/bingo-board-card.png" alt="Card image cap">
@@ -44,7 +50,7 @@
                 </div>
             </div>
         </div>
-
+        <!-- author of code by vish@sbg-->
         <div class="col-md-4">
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="app/images/bingo-card-card.png" alt="Card image cap">
@@ -55,7 +61,7 @@
                 </div>
             </div>
         </div>
-
+        <!-- author of code by vish@sbg-->
         <!-- <div class="column" style="margin-top:100px; align-content: center;"> -->
         <div class="col-md-4" style="margin-top:100px; align-content: center;"></div>
 
@@ -68,8 +74,8 @@
                 </div>
             </div>
         </div>
-
-    </div>
-
+    <!-- author of code by vish@sbg-->
+    
+    <script data-name="BMC-Widget" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="vishchintu" data-description="Support me on BingoPay" data-message="Thank you for visiting. You can buy your numbers !!" data-color="#F471FF" data-position="right" data-x_margin="18" data-y_margin="18"></script>
 </body>
 </html>
